--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timeline</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="yer.png">
 </head>
 <body>
     <h1>Timeline of Bloons Tower Defence Games That I Grew Up With</h1>
     <div class="container">
-        <img id="bloons" src="bloonstd6.jpg" alt="Bloons TD Image">
+        <img id="bloons" src="BTD6main.png" alt="Bloons TD Image">
         <div class="text-content">
             <h2 id="title">Bloons Tower Defence</h2>
-            <p id="description">Bloons Tower Defense (BTD) is a popular tower defense game series where players defend against waves of attacking bloons (balloons) by strategically placing various types of towers along a path. Each tower has different abilities, costs, and upgrade paths, and they pop bloons when they are in range. The goal is to prevent the bloons from reaching the end of the track.</p>
+            <p id="description">Bloons Tower Defense (BTD) is a highly popular tower defense game series where players fend off waves of attacking bloons (balloons) by strategically positioning various types of towers along a path. Each tower offers unique abilities, costs, and upgrade paths, designed to pop bloons within their range. The ultimate objective is to stop the bloons from reaching the end of the track.</p>
         </div>
     </div>
     <button id="Introduction">Introduction</button>
